# HCMUT-AI-Agent-Chatbot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
BKU_KB/BKU_KB/: Các câu hỏi liên quan đến tín chỉ tự do.docx  DHBK-SDH - Quy dinh to chuc dao tao trinh do Thac si 2019.docx  Hoãn thi Giữa kỳ và Cuối kỳ.docx  Quy định về kỹ năng công nghệ thông tin.docx  Quy định về học vụ và đào tạo - Phiên bản hợp nhất.docx  Quyết định ban hành Quy định hướng dẫn và chấm tốt nghiệp bậc Đại học.docx  lịch học vụ 242.docx  Đăng ký các môn giáo dục thể chất khóa 2024.docx
BKU_KB/BKU_KB/graduate/: DHBK-SDH - Quy dinh to chuc dao tao trinh do Thac si 2022.docx
BKU_KB/BKU_KB/regulation_info/: 184_Thông báo Kết luận tại Phiên họp Hội đồng học vụ ĐH&SĐH - HK232.docx  Bảng tổng hợp quy định các chuẩn.docx  Các thông tin cần biết cho tân sinh viên.docx  Kéo dài thời gian đào tạo.docx  Ngoại ngữ.docx  Quy trình đăng ký môn học.docx  Rút môn học.docx  Đào tạo song ngành.docx  Đánh giá kết quả học tập.docx  Đăng ký Thông tin văn bằng.docx  Đăng ký các môn anh văn khóa 2024.docx  Đăng ký môn học - Quy định - Hướng dẫn chung.docx
BKU_KB/BKU_KB/tuition_fee/: học phí 2024-2025.docx
src/: config.py  console.py  logger.py  main.py  requirements.txt
src/frontend/: index.html  script.js  style.css
src/frontend/js/: api.js  dom.js  features.js  ui.js  (+1 more)
src/genai_agent/: agent.py  mongo_db.py
vectorstores/: upload_pinecone.py
vectorstores/tuition_db_faiss/: index.faiss  index.pkl
(+32 files in other folders)
