[project]
name = "sales-ai-agent"
version = "0.1.0"
description = "Sales AI Agent"
authors = [
    {name = "leeduy0403",email = "lhduy2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.6.10,<0.7.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "litellm (>=1.78.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
